--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
     <main>
         <section class="under_construction">
             <div>
-                <h3>contact under construction</h3>
+                <h3>blog under construction</h3>
             </div>
         </section>
 
