--- a/team.html
+++ b/team.html
@@ -1,123 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sontsa Initiative - Team</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Martel:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <div class="header">
-      <a href="javascript:void(0);" class="menu-button" onclick="toggleMenu()">
-        <img src="site icons/list.svg" alt="Menu" />
-      </a>
-      <a href="index.html" class="logo-center">
-        <img src="site icons/logo.png" alt="Logo" />
-      </a>
-      <div class="placeholder"></div>
-    </div>
-    <div id="topnav" class="topnav">
-      <ul>
-        <li class="nav-item"><a href="mentorship.html">MENTORSHIP</a></li>
-        <li class="nav-item"><a href="team.html">TEAM</a></li>
-        <li class="nav-item"><a href="volunteer.html">VOLUNTEER</a></li>
-        <li class="dropdown">
-          <a
-            href="javascript:void(0);"
-            class="dropbtn"
-            onclick="toggleDropdown()"
-            >RESOURCES</a
-          >
-          <div class="dropdown-content" id="dropdown">
-            <a href="tips.html">TIPS & ADVICE</a>
-            <a href="workshops.html">PREVIOUS WORKSHOPS</a>
-            <a href="scholarships.html">SCHOLARSHIPS</a>
-          </div>
-        </li>
-        <li><a href="events.html">EVENTS</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sontsa Initiative</title>
+    <link rel="stylesheet" href="css/team.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Martel:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#" onclick="openMenu()">☰</a></li>
+            </ul>
+        </nav>
+        <a href="index.html">
+            <div class="logo">
+                <img src="images/logo.png">
+                <h3>Sontsa Initiative</h3>
+            </div>
+        </a>
         <div class="socials">
-          <a
-            href="https://mail.google.com/mail/?view=cm&fs=1&to=sontsainitiative@gmail.com"
-          >
-            <img src="social icons/mail.png" />
-          </a>
-          <a href="https://www.youtube.com/@sontsainitiatve198">
-            <img src="social icons/youtube.png" />
-          </a>
-          <a href="https://www.instagram.com/sontsa_initiative/">
-            <img src="social icons/instagram-logo.png" />
-          </a>
+            <a href="https://www.instagram.com/sontsa_initiative/"><img src="images/socials/intsa.png"></a>
+            <a href="https://www.youtube.com/@sontsainitiative"><img src="images/socials/youtube.png"></a>
+            <a href="https://www.facebook.com/sontsainitiative"><img src="images/socials/facebook.png"></a>
+            <a href="https://linktr.ee/Sontsainitiatve"><img src="images/socials/linktree.png"></a>
         </div>
-      </ul>
-    </div>
-    <div class="home-box">
-      <div class="container">
-        <h1>Our Team</h1>
-        <div class="team-section">
-          <div class="team-row">
-            <img src="site icons/co-directors.png" alt="Co-Directors" />
-          </div>
-          <div class="team-row">
-            <img src="site icons/mentorship-lead.png" alt="Mentorship Lead" />
-          </div>
-          <div class="team-row">
-            <img src="site icons/content-leads.png" alt="Content Leads" />
-          </div>
-          <div class="team-row">
-            <img src="site icons/marketing-leads.png" alt="Marketing Leads" />
-          </div>
-          <div class="team-row">
-            <img src="site icons/graphic&design.png" alt="Graphic & Design" />
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer class="footer">
-      <div class="container">
-        <img class="logo-footer" src="site icons/logo.png" alt="Footer Logo" />
-        <form class="newsletter">
-          <p class="newsletter-text">Sign up for our newsletter:</p>
-          <input type="email" placeholder="Your email" />
-        </form>
-        <nav class="footer-nav">
-          <ul class="no-bullets">
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">BLOG</a></li>
-            <li><a href="#">RESOURCES</a></li>
-          </ul>
-        </nav>
-        <nav class="footer-nav">
-          <ul class="no-bullets">
-            <li><a href="#">DISCORD</a></li>
-            <li><a href="#">WHATSAPP</a></li>
-          </ul>
-        </nav>
-      </div>
-    </footer>
-    <script>
-      function toggleMenu() {
-        var x = document.getElementById("topnav");
-        if (x.style.display === "block") {
-          x.style.display = "none";
-        } else {
-          x.style.display = "block";
-        }
-      }
+    </header>
 
-      function toggleDropdown() {
-        var x = document.getElementById("dropdown");
-        if (x.style.display === "block") {
-          x.style.display = "none";
-        } else {
-          x.style.display = "block";
-        }
-      }
-    </script>
-  </body>
+    <div id="menu" class="menu">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeMenu()">×</a>
+        <div class="pages">
+            <a href="index.html">home</a>
+            <a href="team.html">meet the team</a>
+            <a href="contact.html">contact us</a>
+            <a href="resources.html">resources</a>
+            <a href="blog.html">blog</a>
+        </div>
+    </div>
+
+    <div id="overlay" class="overlay" onclick="closeMenu()"></div>
+
+    <main>
+        <section class="team-title">
+            <div>
+                <h1>Sontsa Initiative Team</h1>
+            </div>
+        </section>
+
+        <section class="bio-box">
+            <div>
+                <h1>Co-Directors</h1>
+                <div class="bio-row">
+                    <div class="bio-card">
+                        <img src="images/team/penpa dolma.png">
+                        <h2>PENPA DOLMA</h2>
+                        <p>
+                            Oberlin College ‘26 </br>
+                            Major: Economics & Political Science
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/nyima bhuti.png">
+                        <h2>NYIMA BHUTI</h2>
+                        <p>
+                            Wheaton College ‘25 </br>
+                            Major: Biology
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/tenzin tseten.png">
+                        <h2>TENZIN TSETEN</h2>
+                        <p>
+                            University of Oregon ‘26 </br>
+                            Major: Human Physiology
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="bio-box">
+            <div>
+                <h1>Mentorship Leads</h1>
+                <div class="bio-row">
+                    <div class="bio-card">
+                        <img src="images/team/thupten palmo.png">
+                        <h2>THUPTEN PALMO</h2>
+                        <p>
+                            Bucknell University ‘27 </br>
+                            Major: Animal Behavior
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/tenzin samten.png">
+                        <h2>TENZIN SAMTEN</h2>
+                        <p>
+                            Middlebury College ‘27 </br>
+                            Major: Chemistry/Biochemistry
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="bio-box">
+            <div>
+                <h1>Educational Content Leads</h1>
+                <div class="bio-row">
+                    <div class="bio-card">
+                        <img src="images/team/tenzin tsega.png">
+                        <h2>TENZIN TSEGA</h2>
+                        <p>
+                            University of Virginia ‘25 </br>
+                            Major: Global Studies Security & Justice
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/tsering lhamo.png">
+                        <h2>TSERING LHAMO</h2>
+                        <p>
+                            Earlham College ‘23 </br>
+                            Major: International Studies
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/no pfp.png">
+                        <h2>SONAM TSERING</h2>
+                        <p>
+                            Berea College ‘27 </br>
+                            Major: Undecided
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="bio-box">
+            <div>
+                <h1>Marketing Leads</h1>
+                <div class="bio-row">
+                    <div class="bio-card">
+                        <img src="images/team/tenzin yangchen.png">
+                        <h2>TENZIN YANGCHEN</h2>
+                        <p>
+                            Wellesley College ‘25 </br>
+                            Major: Economics & Computer Science
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/dekyi yangzom.png">
+                        <h2>DEKYI YANGZOM</h2>
+                        <p>
+                            Brown University ‘26 </br>
+                            Major: Economics & Applied Mathematics
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="bio-box">
+            <div>
+                <h1>Graphics & Design Lead</h1>
+                <div class="bio-row">
+                    <div class="bio-card">
+                        <img src="images/team/tenzing choezing.png">
+                        <h2>TENZING CHOEZING</h2>
+                        <p>
+                            Stanford University ‘25 </br>
+                            Major: Design
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+        <form class="newsletter">
+            <p>Sign up for our newsletter:</p>
+            <input type="email" placeholder="your email" />
+        </form>
+
+        <div class="footer_pages">
+            <a href="index.html">ABOUT</a>
+            <a href="team.html">TEAM</a>
+            <a href="contact.html">CONTACT</a>
+            <a href="resources.html">RESOURCES</a>
+            <a href="blog.html">BLOG</a>
+        </div>
+
+        <div class="footer_socials">
+            <a href="https://www.instagram.com/sontsa_initiative/"><img src="images/socials/intsa.png"></a>
+            <a href="https://www.youtube.com/@sontsainitiative"><img src="images/socials/youtube.png"></a>
+            <a href="https://www.facebook.com/sontsainitiative"><img src="images/socials/facebook.png"></a>
+            <a href="https://linktr.ee/Sontsainitiatve"><img src="images/socials/linktree.png"></a>
+        </div>
+    </footer>
+
+    <script src="index.js"></script>
+</body>
+
 </html>
