current page cleanup
- added codirectors to homepage
- moved cofounders to end of team page
- made instashowcase link to insta
- fixed some small mobile styling bugs and typos, and cleaned up images folder

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h3>OUR STORY</h3>
                 <p>
                     Sontsa Initiative is a student-run volunteer-based organization created by Co-Founders Kalden
-                    Namgyal (Brown ‘24), Tenzin Gyaltsen (Macalaster ‘24), and Tenzin Chonzom (Stanford ‘25) in 2020
+                    Namgyal (Brown ‘24), Tenzin Gyaltsen (Macalester ‘24), and Tenzin Chonzom (Stanford ‘25) in 2020
                     with the aim of helping Tibetan students in exile apply to colleges in America, based on their own
                     experiences. Realizing how important mentorship was in their own college application journeys, they
                     wanted to provide the same assistance to the next generation of Tibetan students applying to
@@ -75,18 +75,23 @@
             <img src="images/zoom_pic.png">
         </section>
 
-        <section class="cofounders">
+        <section class="codirectors">
             <div>
-                <img src="/images/team/cofounders/chonzom.png">
-                <h2>TENZIN CHONZOM</h2>
-            </div>
-            <div>
-                <img src="/images/team/cofounders/kalden.png">
-                <h2>KALDEN NAMGYAL</h2>
-            </div>
-            <div>
-                <img src="/images/team/cofounders/gyaltsen.png">
-                <h2>TENZIN GYALTSEN</h2>
+                <h3>SONTSA CO-DIRECTORS</h3>
+                <div class="codirector_row">
+                    <div class="codirector_image">
+                        <img src="/images/team/penpa dolma.png">
+                        <h2>PENPA DOLMA</h2>
+                    </div>
+                    <div class="codirector_image">
+                        <img src="/images/team/nyima bhuti.png">
+                        <h2>NYIMA BHUTI</h2>
+                    </div>
+                    <div class="codirector_image">
+                        <img src="/images/team/tenzin tseten.png">
+                        <h2>TENZIN TSETEN</h2>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -140,7 +145,9 @@
         </section>
 
         <section class="insta_showcase">
-            <img src="images/insta_showcase.png">
+            <a href="https://www.instagram.com/sontsa_initiative/">
+                <img src="images/insta_showcase.png">
+            </a>
         </section>
 
     </main>
