--- a/team.html
+++ b/team.html
@@ -195,6 +195,41 @@
             </div>
         </section>
 
+        <section class="bio-box">
+            <div>
+                <h1>Co-Founders</h1>
+                <div class="bio-row">
+                    <div class="bio-card">
+                        <img src="images/team/chonzom.png">
+                        <h2>TENZIN CHONZOM</h2>
+                        <p>
+                            Stanford University ‘25 </br>
+                            Major: Computer Science
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/kalden.png">
+                        <h2>KALDEN NAMGYAL</h2>
+                        <p>
+                            Brown University ‘24 </br>
+                            Major: International Relations
+                        </p>
+                    </div>
+
+                    <div class="bio-card">
+                        <img src="images/team/gyaltsen.png">
+                        <h2>TENZING GYALTSEN</h2>
+                        <p>
+                            Macalester College ‘24 </br>
+                            Major: Computer Science
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
