clean up contact page typo

--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
         <section class="contact_body">
             <div class="contact_text">
                 <p>
-                    We try respond to promptly respond to emails and direct messages. Make sure to follow us on our
+                    We try to respond promptly to emails and direct messages. Make sure to follow us on our
                     socials & sign up for our newsletter to be updated about our programming!
                 </p>
             </div>
@@ -89,10 +89,7 @@
                     <!-- Honeypot Spam Protection -->
                     <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
 
-                    <!-- Custom Confirmation / Success Page -->
-                    <!-- <input type="hidden" name="redirect" value="https://mywebsite.com/thanks.html"> -->
-
-                    <button class="submit_button" type="submit">Submit Message</button>
+                    <button type="submit">Submit Message</button>
 
                 </form>
             </div>
