finished resources for desktop version

--- a/blog.html
+++ b/blog.html
@@ -54,6 +54,22 @@
             <div>
                 <h3>blog under construction</h3>
             </div>
+            <!-- Test Substack Blog Embed -->
+            <!-- <div class="substack-post-embed">
+                <p lang="en">Top 3 Insights from Sontsa Initiative’s Higher Ed Speaker Series 1 with Ugyan Choedup,
+                    Ph.D. by Sontsa Initiative</p>
+                <p></p><a data-post-link
+                    href="https://sontsa.substack.com/p/top-3-insights-from-sontsa-initiatives">Read on Substack</a>
+            </div>
+            <script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>
+            <div class="substack-post-embed">
+                <p lang="en">Top 3 Insights from Sontsa Initiative’s Higher Ed Speaker Series 1 with Ugyan Choedup,
+                    Ph.D. by Sontsa Initiative</p>
+                <p></p><a data-post-link
+                    href="https://sontsa.substack.com/p/top-3-insights-from-sontsa-initiatives">Read on Substack</a>
+            </div>
+            <script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>
+         -->
         </section>
 
     </main>
