--- a/resources.html
+++ b/resources.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sontsa Initiative</title>
-    <link rel="stylesheet" href="css/temp.css">
+    <link rel="stylesheet" href="css/resources.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Martel:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -50,9 +51,135 @@
     <div id="overlay" class="overlay" onclick="closeMenu()"></div>
 
     <main>
-        <section class="under_construction">
+        <section class="resources_title">
             <div>
-                <h3>resources under construction</h3>
+                <h1>Sontsa Initiative Team</h1>
+                <h3>Here are some of the resources that might guide you in your process to apply to colleges in the U.S.
+                </h3>
+            </div>
+        </section>
+
+        <section class="tools_and_links">
+            <div>
+                <h3>TOOLS & LINKS</h3>
+                <div class="tools_row">
+                    <div class="tool_box">
+                        <h3>Sontsa Virtual Office Hours</h3>
+                        <p>
+                            Need help with college applications? Talk to us! RSVP for a spot to chat with us with the
+                            link below.
+                        </p>
+                        <a href="http://tinyurl.com/booksontsahour">
+                            <p>LEARN MORE</p>
+                        </a>
+                    </div>
+
+                    <div class="tool_box">
+                        <h3>Sontsa Resources Drive</h3>
+                        <p>
+                            Sontsa's Google Drive for all of our public resources related to college apps, college
+                            essays, resumes, interviews, and more!
+                        </p>
+                        <a
+                            href="https://drive.google.com/drive/folders/1Ga_ySu--F1RE_0xKHADLQmTXady5DUA0?usp=drive_link">
+                            <p>LEARN MORE</p>
+                        </a>
+                    </div>
+
+                    <div class="tool_box">
+                        <h3>US Colleges that Accept Duolingo English Test</h3>
+                        <p>
+                            List of U.S. colleges and universities that accept Duolingo English Test for English
+                            Language requirements.
+                        </p>
+                        <a
+                            href="https://docs.google.com/spreadsheets/d/1bNuaAVVVO3p17I-nJA7EXfFNttKc0Uivr3jzPss1vgQ/edit?gid=1439772858#gid=1439772858">
+                            <p>LEARN MORE</p>
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <hr class="tools_divider">
+
+        <!-- Only 6 videos highlighted at a time, pick most recent / relevant. -->
+        <section class="past_workshops">
+            <div>
+                <h3>PAST WORKSHOPS</h3>
+                <div class="workshop_videos">
+
+                    <div class="workshop_row">
+                        <div class="video">
+                            <iframe class="youtube_vid"
+                                src="https://www.youtube-nocookie.com/embed/oL8-L6AyIaE?si=RwXc1rf5wSr6q8G3"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                            </iframe>
+                            <p>Sontsa '24 Day 1: Intro to College Apps</p>
+                        </div>
+                        <div class="video">
+                            <iframe class="youtube_vid"
+                                src="https://www.youtube-nocookie.com/embed/wTI_ltNnRKc?si=6bK4xGY7d7NDC4wx"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                            </iframe>
+                            <p>Sontsa '24 Day 2: Financial Aid</p>
+                        </div>
+                        <div class="video">
+                            <iframe class="youtube_vid"
+                                src="https://www.youtube-nocookie.com/embed/8C9o1JdjE7Q?si=G-89zrAPEj3Bwz7T"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                            </iframe>
+                            <p>Sontsa '24 Day 3: College Essay Guide</p>
+                        </div>
+                    </div>
+
+                    <div class="workshop_row">
+                        <div class="video">
+                            <iframe class="youtube_vid"
+                                src="https://www.youtube-nocookie.com/embed/D4PqzEPxVMI?si=CRXPjM-a12mfY2vW"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                            </iframe>
+                            <p>Tsering Lodhen (2nd Yr Physics PhD)</p>
+                        </div>
+                        <div class="video">
+                            <iframe class="youtube_vid"
+                                src="https://www.youtube-nocookie.com/embed/l2hcCHn9KaE?si=NvbbgLqT3k0jM4bX"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                            </iframe>
+                            <p>How to Apply for MS in the USA?</p>
+                        </div>
+                        <div class="video">
+                            <iframe class="youtube_vid"
+                                src="https://www.youtube-nocookie.com/embed/QYU_0eASXDI?si=KzLkOhCXJY5Uqeap"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                            </iframe>
+                            <p>Tibetan Scholarship Program Info Session</p>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="more_workshops">
+                    <a href="https://www.youtube.com/@sontsainitiative">
+                        <p>
+                            More videos posted on our YouTube channel:</br>
+                            @SontsaInitiative
+                        </p>
+                    </a>
+                </div>
             </div>
         </section>
 
