--- a/team.html
+++ b/team.html
@@ -213,16 +213,16 @@
                         <h2>KALDEN NAMGYAL</h2>
                         <p>
                             Brown University ‘24 </br>
-                            Major: International Relations
+                            Major: International Affairs & Economics
                         </p>
                     </div>
 
                     <div class="bio-card">
                         <img src="images/team/gyaltsen.png">
-                        <h2>TENZING GYALTSEN</h2>
+                        <h2>TENZIN GYALTSEN</h2>
                         <p>
                             Macalester College ‘24 </br>
-                            Major: Computer Science
+                            Major: Computer Science & Political Science
                         </p>
                     </div>
 
