resources mobile styling and cleanup

--- a/resources.html
+++ b/resources.html
@@ -64,7 +64,7 @@
                 <h3>TOOLS & LINKS</h3>
                 <div class="tools_row">
                     <div class="tool_box">
-                        <h3>Sontsa Virtual Office Hours</h3>
+                        <h3>Virtual Office Hours</h3>
                         <p>
                             Need help with college applications? Talk to us! RSVP for a spot to chat with us with the
                             link below.
@@ -75,7 +75,7 @@
                     </div>
 
                     <div class="tool_box">
-                        <h3>Sontsa Resources Drive</h3>
+                        <h3>Resources Drive</h3>
                         <p>
                             Sontsa's Google Drive for all of our public resources related to college apps, college
                             essays, resumes, interviews, and more!
