complete blog page

--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sontsa Initiative</title>
-    <link rel="stylesheet" href="css/temp.css">
+    <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,26 +50,28 @@
     <div id="overlay" class="overlay" onclick="closeMenu()"></div>
 
     <main>
-        <section class="under_construction">
+        <section class="blog_title">
             <div>
-                <h3>blog under construction</h3>
+                <h1>SONTSA BLOG</h1>
             </div>
-            <!-- Test Substack Blog Embed -->
-            <!-- <div class="substack-post-embed">
-                <p lang="en">Top 3 Insights from Sontsa Initiative’s Higher Ed Speaker Series 1 with Ugyan Choedup,
-                    Ph.D. by Sontsa Initiative</p>
-                <p></p><a data-post-link
-                    href="https://sontsa.substack.com/p/top-3-insights-from-sontsa-initiatives">Read on Substack</a>
+        </section>
+
+        <section class="blog_content">
+            <div class="blog_text">
+                <h3>
+                    Subscribe to our substack and read some of our blog posts! We are planning to write more, so stay tuned!
+                </h3>
             </div>
-            <script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>
-            <div class="substack-post-embed">
-                <p lang="en">Top 3 Insights from Sontsa Initiative’s Higher Ed Speaker Series 1 with Ugyan Choedup,
-                    Ph.D. by Sontsa Initiative</p>
-                <p></p><a data-post-link
-                    href="https://sontsa.substack.com/p/top-3-insights-from-sontsa-initiatives">Read on Substack</a>
+
+            <div class="blog_posts">
+                <div class="substack-post-embed">
+                    <p lang="en">Top 3 Insights from Sontsa Initiative’s Higher Ed Speaker Series 1 with Ugyan Choedup,
+                        Ph.D. by Sontsa Initiative</p>
+                    <p></p><a data-post-link
+                        href="https://sontsa.substack.com/p/top-3-insights-from-sontsa-initiatives">Read on Substack</a>
+                </div>
+                <script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>
             </div>
-            <script async src="https://substack.com/embedjs/embed.js" charset="utf-8"></script>
-         -->
         </section>
 
     </main>
