--- a/resources.html
+++ b/resources.html
@@ -53,7 +53,7 @@
     <main>
         <section class="resources_title">
             <div>
-                <h1>Sontsa Initiative Team</h1>
+                <h1>Sontsa Initiative Resources</h1>
                 <h3>Here are some of the resources that might guide you in your process to apply to colleges in the U.S.
                 </h3>
             </div>
